--- a/templates/changeset.html
+++ b/templates/changeset.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html
     PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
 <html xmlns="http://www.w3.org/1999/xhtml"
-  xmlns:py="http://genshi.edgewall.org/"
-  xmlns:xi="http://www.w3.org/2001/XInclude">
-
-  <xi:include href="layout.html"><xi:fallback/></xi:include>
-  <xi:include href="macros.html"><xi:fallback/></xi:include>
-
-  <head><title>$title</title></head>
+      xmlns:py="http://genshi.edgewall.org/"
+      xmlns:xi="http://www.w3.org/2001/XInclude">
+  <xi:include href="layout.html" />
+  <xi:include href="macros.html" />
+  <head>
+    <title>$title</title>
+  </head>
 
   <body>
     <div id="ctxtnav" class="nav">
@@ -135,7 +134,7 @@
           </dl>
         </div>
 
-        <xi:include href="diff_div.html"><xi:fallback/></xi:include>
+        <xi:include href="diff_div.html" />
 
       </div>
     </div>
