--- a/templates/milestone_edit.html
+++ b/templates/milestone_edit.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:py="http://genshi.edgewall.org/"
       xmlns:xi="http://www.w3.org/2001/XInclude">
-  <xi:include href="layout.html"><xi:fallback/></xi:include>
+  <xi:include href="layout.html" />
   <head>
     <py:choose test="milestone.exists">
       <title py:when="True">Edit Milestone ${milestone.name}</title>
