--- a/templates/report_view.html
+++ b/templates/report_view.html
@@ -1,5 +1,6 @@
-<div xmlns="http://www.w3.org/1999/xhtml" xmlns:py="http://genshi.edgewall.org/"
-  id="content" class="report">
+<div xmlns="http://www.w3.org/1999/xhtml"
+     xmlns:py="http://genshi.edgewall.org/"
+     id="content" class="report">
 
   <h1>$report.title
     <span py:if="numrows and report.id != -1" class="numrows">($numrows matches)</span>
