--- a/templates/revisionlog.html
+++ b/templates/revisionlog.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html
     PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
 <html xmlns="http://www.w3.org/1999/xhtml"
-  xmlns:py="http://genshi.edgewall.org/"
-  xmlns:xi="http://www.w3.org/2001/XInclude">
-
-  <xi:include href="layout.html"><xi:fallback/></xi:include>
-  <xi:include href="macros.html"><xi:fallback/></xi:include>
-
-  <head><title>$path (log)</title></head>
+      xmlns:py="http://genshi.edgewall.org/"
+      xmlns:xi="http://www.w3.org/2001/XInclude">
+  <xi:include href="layout.html" />
+  <xi:include href="macros.html" />
+  <head>
+    <title>$path (log)</title>
+  </head>
 
   <body>
-
     <div id="ctxtnav" class="nav">
       <ul py:with="prev = chrome.links.prev; next = chrome.links.next">
         <li class="first${not (prev or next) and ' last' or ''}">
