--- a/templates/milestone_edit.html
+++ b/templates/milestone_edit.html
@@ -90,7 +90,7 @@ ${milestone.description_source}</textarea></p>
           <input py:otherwise="" type="submit" value="Add milestone" />
           <input type="submit" name="cancel" value="Cancel" />
         </div>
-        <script type="text/javascript" src="${chromehtdocs_location}js/wikitoolbar.js"></script>
+        <script type="text/javascript" src="${chrome.htdocs_location}js/wikitoolbar.js"></script>
       </form>
 
     </div>
