--- a/templates/error.html
+++ b/templates/error.html
@@ -6,7 +6,7 @@
       xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="layout.html" />
   <head>
-    <title>$title</title>
+    <title>${message or 'Error'}</title>
     <script type="text/javascript">/*<![CDATA[*/
       $(document).ready(function() {
         $("#traceback a").click(function() {
